sympow now needs autotools

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,9 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
+    - libtool
+    - autoconf
+    - automake
   host:
     - pari
   run:
