--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url:  https://salsa.debian.org/science-team/sympow/-/archive/upstream/{{ version }}/sympow-upstream-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - patches/0001-OSX-apparently-does-not-know-about-t.patch
 
 build:
   number: 2
